git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1232 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/sandbox/pom.xml
+++ b/sandbox/pom.xml
@@ -24,6 +24,9 @@
       </snapshots>
     </repository>
   </repositories>
+  <properties>
+    <kuali.testjar.phase>none</kuali.testjar.phase>
+  </properties>
   <build>
     <plugins>
       <plugin>
