git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1233 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/sandbox/pom.xml
+++ b/sandbox/pom.xml
@@ -8,6 +8,7 @@
   </parent>
   <groupId>org.kuali.sandbox</groupId>
   <artifactId>sandbox</artifactId>
+  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Kuali Sandbox</name>
   <description>Kuali Sandbox</description>
