git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1236 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/sandbox/pom.xml
+++ b/sandbox/pom.xml
@@ -37,4 +37,9 @@
       </plugin>
     </plugins>
   </build>
+  <scm>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/sandbox</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/sandbox</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/sandbox</url>
+  </scm>
 </project>
