git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1237 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/sandbox/pom.xml
+++ b/sandbox/pom.xml
@@ -31,9 +31,9 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
+        <groupId>org.kuali.maven.plugins</groupId>
         <artifactId>maven-scm-plugin</artifactId>
-        <version>1.5</version>
+        <version>1.5-SNAPSHOT</version>
       </plugin>
     </plugins>
   </build>
