--- a/sandbox/pom.xml
+++ b/sandbox/pom.xml
@@ -38,7 +38,7 @@
       </plugin>
        -->
       <plugin>
-        <groupId>org.apach.maven.plugins</groupId>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-scm-plugin</artifactId>
         <version>1.4</version>
         <executions>
