git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1260 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/sandbox/pom.xml
+++ b/sandbox/pom.xml
@@ -69,6 +69,16 @@
               <message>Removed via Maven ${kuali.build.timestamp}</message>
             </configuration>
           </execution>
+          <execution>
+            <id>checkin-2</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>checkin</goal>
+            </goals>
+            <configuration>
+              <message>Checked in via Maven ${kuali.build.timestamp}</message>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
     </plugins>
