git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1267 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/sandbox/pom.xml
+++ b/sandbox/pom.xml
@@ -69,7 +69,7 @@
               <goal>checkin</goal>
             </goals>
             <configuration>
-              <message>Comitted via Maven ${kuali.build.timestamp}</message>
+              <message>Committed via Maven ${kuali.build.timestamp}</message>
             </configuration>
           </execution>
         </executions>
