--- a/maven-scm-plugin/pom.xml
+++ b/maven-scm-plugin/pom.xml
@@ -19,8 +19,7 @@
   ~ under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -31,7 +30,7 @@
 
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-scm-plugin</artifactId>
-  <version>1.5-SNAPSHOT</version>
+  <version>1.5</version>
   <packaging>maven-plugin</packaging>
 
   <name>Maven SCM Plugin</name>
@@ -42,9 +41,9 @@
   </prerequisites>
 
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-scm-plugin</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-scm-plugin</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/trunk/maven-scm-plugin</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-scm-plugin-1.5</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-scm-plugin-1.5</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/tags/maven-scm-plugin-1.5</url>
   </scm>
 
   <properties>
