--- a/maven-scm-plugin/pom.xml
+++ b/maven-scm-plugin/pom.xml
@@ -30,7 +30,7 @@
 
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-scm-plugin</artifactId>
-  <version>1.5</version>
+  <version>1.6-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>Maven SCM Plugin</name>
@@ -41,9 +41,9 @@
   </prerequisites>
 
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-scm-plugin-1.5</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/maven-scm-plugin-1.5</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/maven-scm-plugin-1.5</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-scm-plugin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-scm-plugin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/maven-scm-plugin</url>
   </scm>
 
   <properties>
