git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1274 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/sandbox/pom.xml
+++ b/sandbox/pom.xml
@@ -33,7 +33,7 @@
       <plugin>
         <groupId>org.kuali.maven.plugins</groupId>
         <artifactId>maven-scm-plugin</artifactId>
-        <version>1.5-SNAPSHOT</version>
+        <version>1.5</version>
         <configuration>
           <includes>**/src/main/resources/*.xml,**/src/main/resources/*.txt</includes>
         </configuration>
