--- a/pom.xml
+++ b/pom.xml
@@ -2,24 +2,18 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
-    <artifactId>kuali</artifactId>
-    <version>70</version>
+    <artifactId>kuali-common</artifactId>
+    <version>15</version>
   </parent>
-  <groupId>org.kuali.maven.impex</groupId>
+  <groupId>org.kuali.db.impex</groupId>
   <artifactId>impex</artifactId>
   <packaging>pom</packaging>
   <version>1.0.20</version>
-  <name>Impex Parent</name>
-  <description>This is the parent pom for the Maven Impex Plugin</description>
+  <name>Impex</name>
+  <description></description>
   <properties>
-    <!-- These 3 properties are required for multi-module builds -->
-    <kuali.site.path>impex/${project.version}</kuali.site.path>
-    <kuali.javadoc.project.url>${kuali.site.public.url}/apidocs/</kuali.javadoc.project.url>
-    <kuali.site.download.path>org/kuali/maven/impex</kuali.site.download.path>
-
     <!-- The test-javadoc report is throwing a NullPointerException -->
     <kuali.javadoc.report.2>javadoc</kuali.javadoc.report.2>
-
     <spring.version>3.0.5.RELEASE</spring.version>
     <junit.version>4.8.1</junit.version>
   </properties>
