--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,8 @@
     </dependency>
   </dependencies>
   <scm>
-    <connection>scm:svn:https://test.kuali.org/svn/student/deploymentlab/tags/impex-1.0.20</connection>
-    <developerConnection>scm:svn:https://test.kuali.org/svn/student/deploymentlab/tags/impex-1.0.20</developerConnection>
-    <url>http://test.kuali.org/svn/student/deploymentlab/tags/impex-1.0.20</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/branches/impex-1.0</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/branches/impex-1.0</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/branches/impex-1.0</url>
   </scm>
 </project>
