Updated groudId to org.kuali.db.impex, switched to the http://svn.kuali.org/repos/foundation SCM server
git-svn-id: https://svn.kuali.org/repos/foundation/branches/impex-1.0@1287 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-impex-plugin/pom.xml
+++ b/maven-impex-plugin/pom.xml
@@ -19,17 +19,17 @@
       <version>1.0.0</version>
     </dependency>
     <dependency>
-      <groupId>org.kuali.maven.impex</groupId>
+      <groupId>org.kuali.db.impex</groupId>
       <artifactId>torque-generator</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.kuali.maven.impex</groupId>
+      <groupId>org.kuali.db.impex</groupId>
       <artifactId>jdbc-support</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.kuali.maven.impex</groupId>
+      <groupId>org.kuali.db.impex</groupId>
       <artifactId>torque-templates</artifactId>
       <version>${project.version}</version>
     </dependency>
