--- a/maven-impex-plugin/pom.xml
+++ b/maven-impex-plugin/pom.xml
@@ -2,14 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
-    <groupId>org.kuali.db.impex</groupId>
-    <artifactId>impex</artifactId>
-    <version>1.0.22-SNAPSHOT</version>
+    <groupId>org.kuali</groupId>
+    <artifactId>kuali-common</artifactId>
+    <version>15</version>
   </parent>
   <groupId>org.kuali.maven.plugins</groupId>
   <artifactId>maven-impex-plugin</artifactId>
+  <version>1.0.22-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
   <name>Maven Impex Plugin</name>
   <description>Maven plugin for converting database agnostic XML files into platform specific SQL files and for examining proprietary databases via JDBC to generate database agnostic XML files</description>
