git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/student@1307 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-cfg-dbs/pom.xml
+++ b/ks-cfg-dbs/pom.xml
@@ -24,6 +24,11 @@
       </snapshots>
     </repository>
   </repositories>
+  <scm>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/sandbox/student/ks-cfg-dbs</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/sandbox/student/ks-cfg-dbs</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/sandbox/student/ks-cfg-dbs</url>
+  </scm>
   <properties>
     <kuali.clover.generate.info.phase>none</kuali.clover.generate.info.phase>
     <ks.impex.sql.plugin.escapeProcessing>false</ks.impex.sql.plugin.escapeProcessing>
