git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/student@1308 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-cfg-dbs/pom.xml
+++ b/ks-cfg-dbs/pom.xml
@@ -348,7 +348,7 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.kuali.maven.impex</groupId>
+        <groupId>org.kuali.maven.plugins</groupId>
         <artifactId>maven-impex-plugin</artifactId>
         <version>1.0.17</version>
         <dependencies>
@@ -512,7 +512,7 @@
       <build>
         <plugins>
           <plugin>
-            <groupId>org.kuali.maven.impex</groupId>
+            <groupId>org.kuali.maven.plugins</groupId>
             <artifactId>maven-impex-plugin</artifactId>
             <executions>
               <execution>
@@ -586,7 +586,7 @@
             </executions>
           </plugin>
           <plugin>
-            <groupId>org.kuali.maven.impex</groupId>
+            <groupId>org.kuali.maven.plugins</groupId>
             <artifactId>maven-impex-plugin</artifactId>
             <executions>
               <execution>
@@ -693,7 +693,7 @@
             </dependencies>
           </plugin>
           <plugin>
-            <groupId>org.kuali.maven.impex</groupId>
+            <groupId>org.kuali.maven.plugins</groupId>
             <artifactId>maven-impex-plugin</artifactId>
             <configuration>
               <forceMojoExecution>true</forceMojoExecution>
