--- a/ks-cfg-dbs/pom.xml
+++ b/ks-cfg-dbs/pom.xml
@@ -350,7 +350,7 @@
       <plugin>
         <groupId>org.kuali.maven.plugins</groupId>
         <artifactId>maven-impex-plugin</artifactId>
-        <version>1.0.17</version>
+        <version>1.0.22-SNAPSHOT</version>
         <dependencies>
           <dependency>
             <groupId>mysql</groupId>
