--- a/ks-cfg-dbs/pom.xml
+++ b/ks-cfg-dbs/pom.xml
@@ -30,6 +30,7 @@
     <url>http://svn.kuali.org/repos/foundation/sandbox/student/ks-cfg-dbs</url>
   </scm>
   <properties>
+    <scm.phase>none</scm.phase>
     <kuali.clover.generate.info.phase>none</kuali.clover.generate.info.phase>
     <ks.impex.sql.plugin.escapeProcessing>false</ks.impex.sql.plugin.escapeProcessing>
     <ks.impex.sql.plugin.orderFile>ascending</ks.impex.sql.plugin.orderFile>
@@ -332,9 +333,9 @@
         </executions>
       </plugin>
       <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
+        <groupId>org.kuali.maven.plugins</groupId>
         <artifactId>maven-scm-plugin</artifactId>
-        <version>1.4</version>
+        <version>1.5</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -833,18 +834,72 @@
     </profile>
     <profile>
       <!-- This profile commits any Impex changes to SCM -->
-      <id>commit-impex-changes</id>
+      <id>update-scm</id>
+      <modules>
+        <module>ks-embedded-db</module>
+      </modules>
       <build>
         <plugins>
           <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
+            <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>maven-impex-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>id-invalid</id>
+                <phase>initialize</phase>
+                <goals>
+                  <goal>id-invalid-data-files</goal>
+                </goals>
+                <configuration>
+                  <schemaXMLFile>${project.basedir}/src/main/impex/schema.xml</schemaXMLFile>
+                </configuration>
+              </execution>
+              <execution>
+                <id>morph-xml</id>
+                <phase>none</phase>
+              </execution>
+              <execution>
+                <id>generate-data-dtd</id>
+                <phase>none</phase>
+              </execution>
+              <execution>
+                <id>generate-oracle-sql</id>
+                <phase>none</phase>
+              </execution>
+              <execution>
+                <id>generate-mysql-sql</id>
+                <phase>none</phase>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
             <artifactId>maven-scm-plugin</artifactId>
             <executions>
               <execution>
-                <id>commit-impex-changes</id>
-                <phase>process-resources</phase>
+                <id>add</id>
+                <phase>${scm.phase}</phase>
                 <goals>
                   <goal>add</goal>
+                </goals>
+                <configuration>
+                  <includes>**/src/main/impex/*.xml,**/src/main/impex/*.dtd</includes>
+                </configuration>
+              </execution>
+              <execution>
+                <id>remove</id>
+                <phase>${scm.phase}</phase>
+                <goals>
+                  <goal>remove</goal>
+                </goals>
+                <configuration>
+                  <includes>${impex.data.invalid}</includes>
+                </configuration>
+              </execution>
+              <execution>
+                <id>commit</id>
+                <phase>${scm.phase}</phase>
+                <goals>
                   <goal>checkin</goal>
                 </goals>
                 <configuration>
