git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/student@1315 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-cfg-dbs/pom.xml
+++ b/ks-cfg-dbs/pom.xml
@@ -881,8 +881,10 @@
                 <phase>${scm.phase}</phase>
                 <goals>
                   <goal>add</goal>
+                  <goal>checkin</goal>
                 </goals>
                 <configuration>
+                  <message>Automated Impex update</message>
                   <includes>**/src/main/impex/*.xml,**/src/main/impex/*.dtd</includes>
                 </configuration>
               </execution>
@@ -891,20 +893,11 @@
                 <phase>${scm.phase}</phase>
                 <goals>
                   <goal>remove</goal>
-                </goals>
-                <configuration>
-                  <includes>${impex.data.invalid}</includes>
-                </configuration>
-              </execution>
-              <execution>
-                <id>commit</id>
-                <phase>${scm.phase}</phase>
-                <goals>
                   <goal>checkin</goal>
                 </goals>
                 <configuration>
                   <message>Automated Impex update</message>
-                  <includes>**/src/main/impex/*.xml,**/src/main/impex/*.dtd</includes>
+                  <includes>${impex.data.invalid}</includes>
                 </configuration>
               </execution>
             </executions>
