git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/student@1325 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-cfg-dbs/pom.xml
+++ b/ks-cfg-dbs/pom.xml
@@ -879,7 +879,7 @@
             <executions>
               <execution>
                 <id>add</id>
-                <phase>process-resources</phase>
+                <phase>${scm.phase}</phase>
                 <goals>
                   <goal>add</goal>
                   <goal>checkin</goal>
@@ -891,7 +891,7 @@
               </execution>
               <execution>
                 <id>remove</id>
-                <phase>process-resources</phase>
+                <phase>${scm.phase}</phase>
                 <goals>
                   <goal>remove</goal>
                   <goal>checkin</goal>
