git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/student@1333 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/ks-cfg-dbs/pom.xml
+++ b/ks-cfg-dbs/pom.xml
@@ -837,6 +837,7 @@
       <!-- This profile commits any Impex changes to SCM -->
       <id>update-scm</id>
       <modules>
+        <module>ks-standalone-db</module>
         <module>ks-embedded-db</module>
       </modules>
       <build>
