--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
@@ -8,10 +7,10 @@
   </parent>
   <groupId>org.kuali.db.impex</groupId>
   <artifactId>impex</artifactId>
-  <version>1.0.22-SNAPSHOT</version>
+  <version>1.0.22</version>
   <packaging>pom</packaging>
   <name>Impex</name>
-  <description></description>
+  <description />
   <properties>
     <!-- The test-javadoc report is throwing a NullPointerException -->
     <kuali.javadoc.report.2>javadoc</kuali.javadoc.report.2>
@@ -63,8 +62,8 @@
     </dependency>
   </dependencies>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/branches/impex-1.0</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/branches/impex-1.0</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/branches/impex-1.0</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/impex-1.0.22</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/impex-1.0.22</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/tags/impex-1.0.22</url>
   </scm>
 </project>
