git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1342 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-impex-plugin/pom.xml
+++ b/maven-impex-plugin/pom.xml
@@ -113,10 +113,9 @@
       <version>3.0.3.RELEASE</version>
     </dependency>
   </dependencies>
-
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/maven-impex-plugin-1.0.22</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/maven-impex-plugin-1.0.22</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/tags/maven-impex-plugin-1.0.22</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-impex-plugin</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-impex-plugin</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/trunk/maven-impex-plugin</url>
   </scm>
 </project>
