--- a/jdbc-support/pom.xml
+++ b/jdbc-support/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.kuali.db.impex</groupId>
     <artifactId>impex</artifactId>
-    <version>1.0.23</version>
+    <version>1.0.24-SNAPSHOT</version>
   </parent>
   <artifactId>jdbc-support</artifactId>
   <name>JDBC Support Utilities</name>
