--- a/kc/kctrunk/deploy.cfg
+++ b/kc/kctrunk/deploy.cfg
@@ -1,9 +1,10 @@
-svnLocation=kc_project/branches/kc_project-3_1
+svnLocation=kc_project/trunk
 deployURL=test.kc.kuali.org:/opt/kc/trunk/webapps/kc-trunk.war
 configURL=test.kc.kuali.org:~/kuali/main/trunk/
 
 dbType=oracle
 dbMode=embedded
+dbParent=311stg
 import.torque.database.user=kctrunk
 import.torque.database.schema=kctrunk
 import.torque.database.password=trunk174kc
