Updating ant build.xml for compliancy with ant 1.8 standards
git-svn-id: https://svn.kuali.org/repos/foundation/db-utils/branches/kul-handle_dollar_signs_in_tables-br@7239 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.xml
+++ b/build.xml
@@ -89,7 +89,8 @@ Note: Due to java native library classloader issues, the export routine (and pos
 	<property name="impex.dir" value="impex" />
     <property name="build.properties" value="build.properties"/>
     <property name="impex.contextProperties" value="${build.properties}"/>
-	<property file="${user.home}/impex-build.properties" />
+	<property name="impex.build.properties"  value="${user.home}/impex-build.properties" />
+	<property file="${impex.build.properties}" />
     <property file="${build.properties}" />
     <property name="lib.dir" value="${impex.dir}/lib"/>
 
