--- a/impex/db-jdbc/src/test/resources/kualidba.properties
+++ b/impex/db-jdbc/src/test/resources/kualidba.properties
@@ -1,6 +1,6 @@
-kuali.jdbc.database=KSTEST
-kuali.jdbc.username=KSTEST
-kuali.jdbc.password=KSTEST
-kuali.jdbc.dba.url=jdbc:oracle:thin:@deploy.ks.kuali.org:1521:KS
-kuali.jdbc.dba.password=gw570229
-kuali.jdbc.dba.sql.execute=true
+jdbc.database=KSTEST
+jdbc.username=KSTEST
+jdbc.password=KSTEST
+jdbc.dba.url=jdbc:oracle:thin:@localhost:1521:XE
+jdbc.dba.password=gw570229
+jdbc.dba.sql.execute=true
