git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1365 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/db-impex/pom.xml
+++ b/impex/db-impex/pom.xml
@@ -58,7 +58,7 @@
     <dependency>
       <groupId>org.kuali.student.db</groupId>
       <artifactId>ks-rice-db</artifactId>
-      <version>1.2-SNAPSHOT</version>
+      <version>1.2-M4</version>
       <scope>test</scope>
     </dependency>
     <dependency>
