git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1368 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -266,6 +266,8 @@
                 <argument>-Dimpex.password=${impex.password}</argument>
                 <argument>-Dimpex.dba.password=${impex.dba.password}</argument>
                 <argument>-Dimpex.url=${impex.url}</argument>
+                <argument>-Dimpex.dba.url=${impex.url}</argument>
+                <argument>-X</argument>
               </arguments>
             </configuration>
           </execution>
