--- a/build-tools/pom.xml
+++ b/build-tools/pom.xml
@@ -7,25 +7,26 @@
 	on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either 
 	express or implied. See the License for the specific language governing permissions 
 	and limitations under the License. -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <name>Kuali SQL</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <name>Kuali Build Tools</name>
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
     <version>15</version>
   </parent>
-  <description>General purpose library of SQL statements</description>
-  <groupId>org.kuali.db.sql</groupId>
-  <artifactId>kuali-sql</artifactId>
-  <version>1.0.2-SNAPSHOT</version>
+  <description>General purpose build tools</description>
+  <groupId>org.kuali.tools</groupId>
+  <artifactId>cm-tools</artifactId>
+  <version>1.0-SNAPSHOT</version>
   <properties>
     <kuali.testjar.phase>none</kuali.testjar.phase>
   </properties>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/kuali-sql</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/kuali-sql</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/trunk/kuali-sql</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/cm-tools</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/cm-tools</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/trunk/cm-tools</url>
   </scm>
   <developers>
     <developer>
