--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>12</version>
+    <version>16-SNAPSHOT</version>
   </parent>
   <groupId>org.kuali.rice</groupId>
   <artifactId>rice</artifactId>
@@ -235,7 +235,7 @@
           This plugin also enforces that plugins specify a version number. Using meta version tags or not specifing a version
           on a plugin is a decrecated feature as it leads to build instability.
 
-          Finally, the DependencyConvergence rule helps ensure that all of our submodules are resolving the same versions 
+          Finally, the DependencyConvergence rule helps ensure that all of our submodules are resolving the same versions
           of
           artifacts by making sure that all deps converge. This managed at the dep management section which is critical.
         -->
