--- a/maven-scm-plugin/pom.xml
+++ b/maven-scm-plugin/pom.xml
@@ -52,6 +52,28 @@
     <apache.scm.version>1.5</apache.scm.version>
   </properties>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.kuali.maven.plugins</groupId>
+        <artifactId>maven-eclipse-formatter-plugin</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <configuration>
+          <eclipseExecutable>C:/eclipse/3.6.2/r11/eclipse/eclipse.exe</eclipseExecutable>
+          <configPath>classpath:org/kuali/cm/eclipse/eclipse.prefs</configPath>
+          <vm>C:/Program Files/Java/jdk1.6.0_21/bin/javaw.exe</vm>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>org.kuali.cm</groupId>
+            <artifactId>cm-tools</artifactId>
+            <version>1.0-SNAPSHOT</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.maven</groupId>
