--- a/maven-eclipse-formatter-plugin/pom.xml
+++ b/maven-eclipse-formatter-plugin/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>16-SNAPSHOT</version>
+    <version>15</version>
   </parent>
 
   <groupId>org.kuali.maven.plugins</groupId>
