git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1430 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-eclipse-formatter-plugin/pom.xml
+++ b/maven-eclipse-formatter-plugin/pom.xml
@@ -13,7 +13,7 @@
   <packaging>maven-plugin</packaging>
 
   <name>Maven Eclipse Formatter Plugin</name>
-  <description>Maven Plugin for invoking the Eclipse formatter via the command line</description>
+  <description>Maven Plugin for invoking the Eclipse java source code formatter</description>
 
   <scm>
     <connection>scm:svn:http://svn.kuali.org/repos/foundation/trunk/maven-eclipse-formatter-plugin</connection>
