--- a/maven-eclipse-formatter-plugin/pom.xml
+++ b/maven-eclipse-formatter-plugin/pom.xml
@@ -23,6 +23,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.apache.ant</groupId>
+      <artifactId>ant</artifactId>
+      <version>1.8.2</version>
+    </dependency>
+    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.0.1</version>
