git-svn-id: https://svn.kuali.org/repos/foundation/trunk@1451 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-eclipse-formatter-plugin/pom.xml
+++ b/maven-eclipse-formatter-plugin/pom.xml
@@ -21,6 +21,16 @@
     <url>http://svn.kuali.org/repos/foundation/trunk/maven-eclipse-formatter-plugin</url>
   </scm>
 
+  <developers>
+    <developer>
+      <id>jcaddel</id>
+      <name>Jeff Caddel</name>
+      <organization>rSmart</organization>
+      <timezone>-7</timezone>
+      <email>jcaddel(at)kuali.org</email>
+    </developer>
+  </developers>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.ant</groupId>
