git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/checkstyle@1482 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/src/main/resources/checkstyle.properties
+++ b/src/main/resources/checkstyle.properties
@@ -16,9 +16,11 @@ ConstantName=must match pattern '^[A-Z][A-Z0-9]*(_[A-Z0-9]+)*$'.
 TypeName=must match pattern '^[A-Z][a-zA-Z0-9]*$'.
 NeedBraces=construct must use '{}'s.
 MemberName=must match pattern '^[a-z_][a-zA-Z0-9]*$'.
-LocalFinalVariableName=^[a-z][a-zA-Z0-9]*$
-LocalVariableName=^[a-z][a-zA-Z0-9]*$
-MethodName=^[a-z][a-zA-Z0-9]*$
-ParameterName=^[a-z][a-zA-Z0-9]*$
-StaticVariableName=^[a-z][a-zA-Z0-9]*$
+LocalFinalVariableName=must match pattern '^[a-z][a-zA-Z0-9]*$'.
+LocalVariableName=must match pattern '^[a-z][a-zA-Z0-9]*$'.
+MethodName=must match pattern '^[a-z][a-zA-Z0-9]*$'.
+ParameterName=must match pattern '^[a-z][a-zA-Z0-9]*$'.
+StaticVariableName=must match pattern '^[a-z][a-zA-Z0-9]*$'.
 .*=Got an exception -
+foo=should be on a new line.
+bar=should be on the same line.
