--- a/cm-tools/pom.xml
+++ b/cm-tools/pom.xml
@@ -16,7 +16,7 @@
     <artifactId>kuali-common</artifactId>
     <version>15</version>
   </parent>
-  <description>General purpose build tools</description>
+  <description>Configuration Management Tools</description>
   <groupId>org.kuali.cm</groupId>
   <artifactId>cm-tools</artifactId>
   <version>1.0-SNAPSHOT</version>
