git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/checkstyle@1489 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/src/main/resources/checkstyle.properties
+++ b/src/main/resources/checkstyle.properties
@@ -1,4 +1,4 @@
-FileLength=File length is  
+FileLength=File length is
 EqualsHashCode=Definition of 'equals()' without corresponding definition of 'hashCode()'.
 AvoidNestedBlocks=Avoid nested blocks.
 InnerAssignment=Inner assignments should be avoided.
@@ -22,5 +22,7 @@ MethodName=must match pattern '^[a-z][a-zA-Z0-9]*$'.
 ParameterName=must match pattern '^[a-z][a-zA-Z0-9]*$'.
 StaticVariableName=must match pattern '^[a-z][a-zA-Z0-9]*$'.
 .*=Got an exception -
-foo=should be on a new line.
-bar=should be on the same line.
+OperatorWrap=should be on a new line.
+RightCurly=should be on the same line.
+WhitespaceAround.1=is not preceded with whitespace.
+WhitespaceAround.2=is not followed by whitespace.
