--- a/kuali-spring-util/pom.xml
+++ b/kuali-spring-util/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>13</version>
+    <version>16-SNAPSHOT</version>
   </parent>
   <groupId>org.kuali.spring</groupId>
   <artifactId>kuali-spring-util</artifactId>
