--- a/common/pom.xml
+++ b/common/pom.xml
@@ -25,8 +25,8 @@
 
   <properties>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm z</maven.build.timestamp.format>
-    <!-- Explicitly set build timestamp as a custom property. The maven-resource-plugin is not filtering values correctly
-      without this -->
+
+    <!-- Explicitly set build timestamp. The maven-resource-plugin is not filtering values correctly without this -->
     <kuali.build.timestamp>${maven.build.timestamp}</kuali.build.timestamp>
 
     <!-- Default Clover config -->
