--- a/common/pom.xml
+++ b/common/pom.xml
@@ -117,7 +117,7 @@
             <dependency>
               <groupId>org.kuali.cm</groupId>
               <artifactId>cm-tools</artifactId>
-              <version>1.3-SNAPSHOT</version>
+              <version>1.3</version>
             </dependency>
           </dependencies>
         </plugin>
@@ -334,7 +334,7 @@
             <dependency>
               <groupId>org.kuali.cm</groupId>
               <artifactId>cm-tools</artifactId>
-              <version>1.3-SNAPSHOT</version>
+              <version>1.3</version>
             </dependency>
           </dependencies>
         </plugin>
