git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/checkstyle@1548 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/src/main/resources/checkstyle.properties
+++ b/src/main/resources/checkstyle.properties
@@ -12,7 +12,7 @@ NoWhitespaceBefore=is not preceded with whitespace.
 VisibilityModifier=must be private and have accessor methods.
 MissingSwitchDefault=switch without "default" clause.
 WhitespaceAfter=is not followed by whitespace.
-ConstantName=must match pattern '^[A-Z][A-Z0-9]*(_[A-Z0-9]+)*$'.
+ConstantName=must match pattern '(^[A-Z][A-Z0-9]*(_[A-Z0-9]+)*$)|log|logger'.
 TypeName=must match pattern '^[A-Z][a-zA-Z0-9]*$'.
 NeedBraces=construct must use '{}'s.
 MemberName=must match pattern '^[a-z_][a-zA-Z0-9]*$'.
@@ -21,8 +21,32 @@ LocalVariableName=must match pattern '^[a-z][a-zA-Z0-9]*$'.
 MethodName=must match pattern '^[a-z][a-zA-Z0-9]*$'.
 ParameterName=must match pattern '^[a-z][a-zA-Z0-9]*$'.
 StaticVariableName=must match pattern '^[a-z][a-zA-Z0-9]*$'.
-.*=Got an exception -
+.*.1=Got an exception -
+.*.2=Unable to get class information for
 OperatorWrap=should be on a new line.
 RightCurly=should be on the same line.
 WhitespaceAround.1=is not preceded with whitespace.
 WhitespaceAround.2=is not followed by whitespace.
+ArrayTypeStyle=Array brackets at illegal position.
+SimplifyBooleanReturn=Conditional logic can be removed.
+RedundantImport.1=Duplicate import
+RedundantImport.2=Redundant import
+EmptyBlock=Empty catch block.
+EmptyStatement.1=Empty statement.
+SimplifyBooleanExpression=Expression can be simplified.
+IllegalInstantiation=Instantiation of
+LineLength=Line is longer than
+StringLiteralEquality=Literal Strings should be compared using equals(), not '!='.
+EmptyStatement.2=Must have at least one statement.
+RedundantThrows=Redundant throws:
+UpperEll=Should use uppercase 'L'.
+UnusedImports=Unused import -
+MagicNumber=is a magic number.
+WhitespaceBefore=is preceded with whitespace.
+FinalClass=should be declared as final.
+AvoidStarImporg=Using the '.*' form of import should be avoided -
+EqualsAvoidNull.1=String literal expressions should be on the left side of an equals comparison.
+EqualsAvoidNull.2=String literal expressions should be on the left side of an equalsIgnoreCase comparison.
+MissingOverride=Must include @java.lang.Override annotation when {@inheritDoc} Javadoc tag exists.
+MissingDeprecated=Must include both @java.lang.Deprecated annotation and @deprecated Javadoc tag with description.
+notsure=Missing a Javadoc comment.
